# booktracker

./: pyproject.toml
.devcontainer/: devcontainer.json
backend/: manage.py  pyproject.toml
backend/books/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_review.py  0003_rename_first_name_author_name_and_more.py  0004_review_created_at_alter_review_rating.py  0005_shelf.py  0006_readbook.py  0007_remove_shelf_name_list_delete_readbook.py  0008_list_name.py  0009_shelf_name.py  0010_alter_book_isbn.py  0011_remove_shelf_books_remove_list_books_media_and_more.py
backend/books/templates/books/: author_detail.html  base.html  book_detail.html  index.html  login.html  register.html
backend/booktracker/: settings.py  urls.py
books/: models.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templates/books/: author_detail.html  book_detail.html  index.html
booktracker/: settings.py  urls.py
native-app/: app.json  package-lock.json  package.json
native-app/app/: _layout.tsx
native-app/app/(tabs)/: _layout.tsx  index.tsx
native-app/hooks/: apiClient.ts  useApiClient.tsx
